correct bootstrap class added to collapse comment form

--- a/qforum/static/qforum/css/qforum.css
+++ b/qforum/static/qforum/css/qforum.css
@@ -11,7 +11,7 @@ body {
 }
 
 #question-form {
-    display: none;
+    border: #282c34 1px solid;
 }
 
 .comment-form {
@@ -25,4 +25,9 @@ body {
 .reply-box{
     padding-left: 10px;
     border: red 2px solid;
+  }
+
+  .search-form {
+      max-width: 300px;
+      display: inline-block;
   }
